--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -27,6 +27,6 @@ template(name='session_edit_icon')
 
 template(name='edit_button')
     a.ui.icon.big.basic.button(href="/m/#{model}/#{_id}/edit" title='edit')
-        //- +ismall name='pencil'
-        i.pencil.icon
+        +ismall name='pencil'
+        //- i.pencil.icon
         
