--- a/client/staff.jade
+++ b/client/staff.jade
@@ -12,10 +12,10 @@ template(name='staff')
                 strong add resident
             .ui.header
                 |#{checkedin_members.count} checked in members
-            +add_button model='work_order'
-            +add_button model='communication'
-            +add_button model='frontdesk_hourly_checklist'
-            +add_button model='front_desk_opening_closing_checklist'
+            +add_button model='work_order' label='work order'
+            +add_button model='communication' label='communication'
+            +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+            +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
             +unit_key_widget
             
         .twelve.wide.column
