--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -76,7 +76,7 @@ template(name='facet')
             //- div
         each filtering_res
             if name
-                .selector.ui.compact.large.button.toggle_selection(class=toggle_value_class title=count)
+                .selector.ui.large.button.toggle_selection(class=toggle_value_class title=count)
                     strong #{name}
                     if is_admin
                         small #{cal_count} #{count}
