--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -56,6 +56,7 @@ template(name='model_doc_view')
                     +comments
                     if is_meal
                         +meal_reviews
+                        +reservations
                     //- .ui.cloud.segment
                     //-     if is_marketplace
                     //-         +karma_transaction
