--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -223,7 +223,7 @@ template(name='view_button')
 
 
 template(name='remove_button')
-    a.ui.icon.basic.button.remove(title='delete')
+    a.ui.icon.basic.button.remove_doc(title='delete')
         i.remove.red.icon
         //- |Delete
 
